--- a/index.html
+++ b/index.html
@@ -74,128 +74,119 @@
             </div>
           </div>
         </div>
-        <div id="snte-menubar-top" class="row" role="toolbar"> <!-- class="btn-toolbar" -->
-          <!--<div class="row">-->
-            <div class="col-md-11">
-              <div class="btn-group">
-                <button type="button" class="btn btn-default" title="MSG-Undo" id="snte-menu-undo"><span class="glyphicon glyphicon-arrow-left"></span></button>
-                <button type="button" class="btn btn-default" title="MSG-Redo" id="snte-menu-redo"><span class="glyphicon glyphicon-share-alt"></span></button>
-              </div>
-              <div class="btn-group">
-                <button type="button" class="btn btn-default" title="MSG-Copy" id="snte-menu-copy">C</button>
-                <button type="button" class="btn btn-default" title="MSG-Paste" id="snte-menu-paste">P</button>
-              </div>
-              <div class="btn-group">
-                <div class="btn-group" id="snte-menu-font-family">
-                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-value="Arial" title="MSG-Fontfamily" style="min-width:160px; text-align: left;">
-                    <span class="value">Arial</span>
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu dropdown-caret">
-                    <li><a href="#" data-value="Arial" style="font-family: Arial;">Arial</a></li>
-                    <li><a href="#" data-value="Courier New" style="font-family: Courier New;">Courier New</a></li>
-                    <li><a href="#" data-value="Georgia" style="font-family: Georgia;">Georgia</a></li>
-                    <li><a href="#" data-value="Times New Roman" style="font-family: Times New Roman;">Times New Roman</a></li>
-                    <li><a href="#" data-value="Trebuchet MS" style="font-family: Trebuchet MS;">Trebuchet MS</a></li>
-                    <li><a href="#" data-value="Verdana" style="font-family: Verdana;">Verdana</a></li>
-                  </ul>
-                </div>
-                <div class="btn-group" id="snte-menu-font-size">
-                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-value="2" title="MSG-Fontsize" style="min-width:55px; text-align: left;">
-                    <span class="value">13</span>
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu dropdown-caret">
-                    <li><a href="#" data-value="1"><font size="1">10</font></a></li>
-                    <li><a href="#" data-value="2"><font size="2">13</font></a></li>
-                    <li><a href="#" data-value="3"><font size="3">16</font></a></li>
-                    <li><a href="#" data-value="4"><font size="4">18</font></a></li>
-                    <li><a href="#" data-value="5"><font size="5">24</font></a></li>
-                    <li><a href="#" data-value="6"><font size="6">32</font></a></li>
-                    <li><a href="#" data-value="7"><font size="7">48</font></a></li>
-                  </ul>
-                </div>
-                <div class="btn-group" id="snte-menu-font-color-container">
-                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-value="rgba(0,0,0,1)" title="MSG-Fontcolor" id="snte-menu-font-color">
-                    A
-                    <span id="snte-menu-font-color-indicator"></span>
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu dropdown-caret snte-menu-colorselector"></ul>
-                </div>
-                <div class="btn-group" id="snte-menu-fill-color-container">
-                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-value="rgba(0,0,0,0)" title="MSG-Fillcolor" id="snte-menu-fill-color">
-                    F
-                    <span id="snte-menu-fill-color-indicator"></span>
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu dropdown-caret snte-menu-colorselector"></ul>
-                </div>
-                <div class="btn-group">
-                  <button type="button" class="btn btn-default" title="MSG-Bold" id="snte-menu-font-bold">B</button>
-                  <button type="button" class="btn btn-default" title="MSG-Italic" id="snte-menu-font-italic">I</button>
-                  <button type="button" class="btn btn-default" title="MSG-Underline" id="snte-menu-font-underline">U</button>
-                  <button type="button" class="btn btn-default" title="MSG-Strikethrough" id="snte-menu-font-strikethrough">S</button>
-                </div>
-              </div>
-              <div class="btn-group">
-                <button type="button" class="btn btn-default active" title="MSG-Textalign-Left" id="snte-menu-font-align-left"><span class="glyphicon glyphicon-align-left"></span></button>
-                <button type="button" class="btn btn-default" title="MSG-Textalign-Center" id="snte-menu-font-align-center"><span class="glyphicon glyphicon-align-center"></span></button>
-                <button type="button" class="btn btn-default" title="MSG-Textalign-Right" id="snte-menu-font-align-right"><span class="glyphicon glyphicon-align-right"></span></button>
-              </div>
-              <div class="btn-group" id="snte-menu-add-element">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="MSG-New-Element">
-                  <span class="glyphicon glyphicon-plus"></span>
-                  MSG-Add-New-Element
+        <div id="snte-menubar-top" class="btn-toolbar" role="toolbar"> <!-- class="btn-toolbar" -->
+            <div class="btn-group">
+              <button type="button" class="btn btn-default" title="MSG-Undo" id="snte-menu-undo"><span class="glyphicon glyphicon-arrow-left"></span></button>
+              <button type="button" class="btn btn-default" title="MSG-Redo" id="snte-menu-redo"><span class="glyphicon glyphicon-share-alt"></span></button>
+            </div>
+            <div class="btn-group">
+              <button type="button" class="btn btn-default" title="MSG-Copy" id="snte-menu-copy">C</button>
+              <button type="button" class="btn btn-default" title="MSG-Paste" id="snte-menu-paste">P</button>
+            </div>
+            <div class="btn-group">
+              <div class="btn-group" id="snte-menu-font-family">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-value="Arial" title="MSG-Fontfamily" style="min-width:160px; text-align: left;">
+                  <span class="value">Arial</span>
                   <span class="caret"></span>
                 </button>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#" data-item="table"><span class="glyphicon glyphicon-th-large"></span>MSG-Table</a></li>
-                  <li><a href="#" data-item="text"><span class="glyphicon glyphicon-font"></span>MSG-Text</a></li>
-                  <li><a href="#" data-item="comment"><span class="glyphicon glyphicon-comment"></span>MSG-Comment</a></li>
-                  <li><a href="#" data-item="chart"><span class="glyphicon glyphicon-signal"></span>MSG-Chart</a></li>
-                  <li><a href="#" data-item="image"><span class="glyphicon glyphicon-picture"></span>MSG-Image</a></li>
+                <ul class="dropdown-menu dropdown-caret">
+                  <li><a href="#" data-value="Arial" style="font-family: Arial;">Arial</a></li>
+                  <li><a href="#" data-value="Courier New" style="font-family: Courier New;">Courier New</a></li>
+                  <li><a href="#" data-value="Georgia" style="font-family: Georgia;">Georgia</a></li>
+                  <li><a href="#" data-value="Times New Roman" style="font-family: Times New Roman;">Times New Roman</a></li>
+                  <li><a href="#" data-value="Trebuchet MS" style="font-family: Trebuchet MS;">Trebuchet MS</a></li>
+                  <li><a href="#" data-value="Verdana" style="font-family: Verdana;">Verdana</a></li>
                 </ul>
               </div>
-              <div class="btn-group">
-                <button type="button" class="btn btn-default active" title="MSG-Show-Comments-On" id="snte-menu-toggle-comments">
-                  <span class="glyphicon glyphicon-comment"></span>
-                </button>
-              </div>
-              <div class="btn-group" id="snte-menu-cell-type">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-value="auto" title="MSG-Auto" style="min-width:150px; text-align: left;">
-                  <span class="value">MSG-Auto</span>
+              <div class="btn-group" id="snte-menu-font-size">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-value="2" title="MSG-Fontsize" style="min-width:55px; text-align: left;">
+                  <span class="value">13</span>
                   <span class="caret"></span>
                 </button>
-                <ul class="dropdown-menu dropdown-caret" style="min-width: 200px;">
-                  <li><a href="#" data-value="auto" title="MSG-Auto">MSG-Auto</a></li>
-                  <li role="presentation" class="divider" style="clear: both;"></li>
-                  <li><a href="#" data-value="text" title="MSG-Text">MSG-Text</a><span class="snte-menu-cell-type-example">xyz</span></li>
-                  <li role="presentation" class="divider" style="clear: both;"></li>
-                  <li><a href="#" data-value="numeric" title="MSG-Number">MSG-Number</a><span class="snte-menu-cell-type-example">1,000.2</span></li>
-                  <li><a href="#" data-value="percent" title="MSG-Percent">MSG-Percent</a><span class="snte-menu-cell-type-example">77.12%</span></li>
-                  <li><a href="#" data-value="currency" title="MSG-Currency">MSG-Currency</a><span class="snte-menu-cell-type-example">€1,000.2</span></li>
-                  <li role="presentation" class="divider" style="clear: both;"></li>
-                  <li><a href="#" data-value="date" title="MSG-Date">MSG-Date</a><span class="snte-menu-cell-type-example">05.04.2014</span></li>
-                  <!--<li><a href="#" data-value="time" title="MSG-Time">MSG-Time</a><span class="snte-menu-cell-type-example">12:30:00</span></li>-->
+                <ul class="dropdown-menu dropdown-caret">
+                  <li><a href="#" data-value="1"><font size="1">10</font></a></li>
+                  <li><a href="#" data-value="2"><font size="2">13</font></a></li>
+                  <li><a href="#" data-value="3"><font size="3">16</font></a></li>
+                  <li><a href="#" data-value="4"><font size="4">18</font></a></li>
+                  <li><a href="#" data-value="5"><font size="5">24</font></a></li>
+                  <li><a href="#" data-value="6"><font size="6">32</font></a></li>
+                  <li><a href="#" data-value="7"><font size="7">48</font></a></li>
                 </ul>
               </div>
-              <div class="btn-group pull-right">
-                <button type="button" class="btn btn-default" id="snte-menu-toggle-search">
-                  <span class="glyphicon glyphicon-search"></span>
+              <div class="btn-group" id="snte-menu-font-color-container">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-value="rgba(0,0,0,1)" title="MSG-Fontcolor" id="snte-menu-font-color">
+                  A
+                  <span id="snte-menu-font-color-indicator"></span>
+                  <span class="caret"></span>
                 </button>
+                <ul class="dropdown-menu dropdown-caret snte-menu-colorselector"></ul>
+              </div>
+              <div class="btn-group" id="snte-menu-fill-color-container">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-value="rgba(0,0,0,0)" title="MSG-Fillcolor" id="snte-menu-fill-color">
+                  F
+                  <span id="snte-menu-fill-color-indicator"></span>
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-caret snte-menu-colorselector"></ul>
+              </div>
+              <div class="btn-group">
+                <button type="button" class="btn btn-default" title="MSG-Bold" id="snte-menu-font-bold">B</button>
+                <button type="button" class="btn btn-default" title="MSG-Italic" id="snte-menu-font-italic">I</button>
+                <button type="button" class="btn btn-default" title="MSG-Underline" id="snte-menu-font-underline">U</button>
+                <button type="button" class="btn btn-default" title="MSG-Strikethrough" id="snte-menu-font-strikethrough">S</button>
               </div>
             </div>
+            <div class="btn-group">
+              <button type="button" class="btn btn-default active" title="MSG-Textalign-Left" id="snte-menu-font-align-left"><span class="glyphicon glyphicon-align-left"></span></button>
+              <button type="button" class="btn btn-default" title="MSG-Textalign-Center" id="snte-menu-font-align-center"><span class="glyphicon glyphicon-align-center"></span></button>
+              <button type="button" class="btn btn-default" title="MSG-Textalign-Right" id="snte-menu-font-align-right"><span class="glyphicon glyphicon-align-right"></span></button>
+            </div>
+            <div class="btn-group" id="snte-menu-cell-type">
+              <button type="button" class="btn btn-default dropdown-toggle disabled" data-toggle="dropdown" data-value="auto" title="MSG-Auto" style="min-width:150px; text-align: left;">
+                <span class="value">MSG-Auto</span>
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu dropdown-caret" style="min-width: 200px;">
+                <li><a href="#" data-value="auto" title="MSG-Auto">MSG-Auto</a></li>
+                <li role="presentation" class="divider" style="clear: both;"></li>
+                <li><a href="#" data-value="text" title="MSG-Text">MSG-Text</a><span class="snte-menu-cell-type-example">xyz</span></li>
+                <li role="presentation" class="divider" style="clear: both;"></li>
+                <li><a href="#" data-value="numeric" title="MSG-Number">MSG-Number</a><span class="snte-menu-cell-type-example">1,000.2</span></li>
+                <li><a href="#" data-value="percent" title="MSG-Percent">MSG-Percent</a><span class="snte-menu-cell-type-example">77.12%</span></li>
+                <li><a href="#" data-value="currency" title="MSG-Currency">MSG-Currency</a><span class="snte-menu-cell-type-example">€1,000.2</span></li>
+                <li role="presentation" class="divider" style="clear: both;"></li>
+                <li><a href="#" data-value="date" title="MSG-Date">MSG-Date</a><span class="snte-menu-cell-type-example">05.04.2014</span></li>
+                <!--<li><a href="#" data-value="time" title="MSG-Time">MSG-Time</a><span class="snte-menu-cell-type-example">12:30:00</span></li>-->
+              </ul>
+            </div>
 
-            <!--<div class="col-md-2 pull-right">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="MSG-Search">
-                <span class="input-group-btn">
-                  <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
-                </span>
-              </div>
-            </div>-->
-          <!--</div>-->
+            <div class="btn-group" id="snte-menu-add-element">
+              <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" title="MSG-New-Element">
+                <span class="glyphicon glyphicon-plus"></span>
+                MSG-Add-New-Element
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#" data-item="table"><span class="glyphicon glyphicon-th-large"></span>MSG-Table</a></li>
+                <li><a href="#" data-item="text"><span class="glyphicon glyphicon-font"></span>MSG-Text</a></li>
+                <li><a href="#" data-item="comment"><span class="glyphicon glyphicon-comment"></span>MSG-Comment</a></li>
+                <li><a href="#" data-item="chart"><span class="glyphicon glyphicon-signal"></span>MSG-Chart</a></li>
+                <li><a href="#" data-item="image"><span class="glyphicon glyphicon-picture"></span>MSG-Image</a></li>
+              </ul>
+            </div>
+
+            <div class="btn-group">
+              <button type="button" class="btn btn-default active" title="MSG-Show-Comments-On" id="snte-menu-toggle-comments">
+                <span class="glyphicon glyphicon-comment"></span>
+              </button>
+            </div>
+
+            <div class="btn-group">
+              <button type="button" class="btn btn-default" id="snte-menu-toggle-search">
+                <span class="glyphicon glyphicon-search"></span>
+              </button>
+            </div>
+
         </div>
         
       </div>
